--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,9 @@ spring:
     url: jdbc:mysql://localhost:3306/rental_platform
     username: root
     password: root
-    
+    tomcat:
+      max-wait: 10000
+      max-active: 30
 mybatis:
   mapper-locations:
   - classpath://mapper/**/*.xml
